# iot-kafka-emulator

./: Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  run-local.sh  run.sh  stop-local.sh
src/: main.rs
test-data/: test.jsonl
