[package]
name = "iot-kafka-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures = "0.3.28"
kafka-serde = "0.1.0"
log = "0.4.17"
rand = "0.8.5"
rskafka = "0.3.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
uuid = { version = "1.3.1", features = ["v4"] }
#rdkafka = { version = "0.25", features = ["cmake-build"] }
